apt (0.8.16~exp5ubuntu8) UNRELEASEDoneiric; urgency=low

  * cherry pick r1825 from lp:~mvo/apt/mvo:
    * apt-pkg/contrib/configuration.cc:
    - fix double delete (LP: #848907)
    - ignore only the invalid regexp instead of all options

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Sep 2011 16:22:20 +0200

apt (0.8.16~exp5ubuntu7) oneiric; urgency=low

  [ Michael Vogt ]
  * cherry pick revision 2173 from lp:~donkult/apt/sid
  
  [ David Kalnischkies ]
  - M-A:same lockstep unpack should operate on installed
    packages first (LP: #835625)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Sep 2011 09:03:33 +0200

apt (0.8.16~exp5ubuntu6) oneiric; urgency=low

  [ Michael Vogt 
  * merged lp:~jr/ubuntu/oneiric/apt/bzr-get-rename, thanks to
    Jonathan Riddell
  
  [ David Kalnischkies ]
  * lots of cppcheck fixes
  * apt-pkg/packagemanager.cc, apt-pkg/pkgcache.cc:
    - ignore "self"-conflicts for all architectures of a package
      instead of just for the architecture of the package locked at
      in the ordering of installations too (Closes: #802901)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 17 Aug 2011 11:32:58 +0200

apt (0.8.16~exp5ubuntu5) oneiric; urgency=low

  * debian/control:
    - fix VCS location
  * methods/mirror.cc:
    - include the architecture(s) in the query string as well so 
      that the server can make better decisions

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 11 Aug 2011 18:03:19 +0200

apt (0.8.16~exp5ubuntu4) oneiric; urgency=low

  * Merge change from Robert Collins to upgrade ubuntu-keyring recommends
    to a hard dependency to match Debian behaviour and fix LP: #816606

 -- Adam Conrad <adconrad@ubuntu.com>  Tue, 09 Aug 2011 14:48:24 -0600

apt (0.8.16~exp5ubuntu3) oneiric; urgency=low

  * apt-pkg/acquire.cc:
    - fix potential divide-by-zero (LP: #823277)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 09 Aug 2011 15:56:44 +0200

apt (0.8.16~exp5ubuntu2) oneiric; urgency=low
